23_01_12/report/sol_1/animal1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal1-deploy
  namespace: animal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animal1
  template:
    metadata:
      labels:
        app: animal1
    spec:
      containers:
        - name: animal1-contaimer
          image: 192.168.0.160:4999/animal:1.0

---
apiVersion: v1
kind: Service
metadata:
  name: animal1-svc
  namespace: animal
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: animal1
