23_01_12/report/sol_1/animal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animal-ingress
  namespace: animal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: animal.com 
      http:
        paths:
          - path: /animal1
            pathType: Prefix
            backend:
              service:
                name: animal1-svc
                port:
                  number: 80
          - path: /animal2
            pathType: Prefix
            backend:
              service:
                name: animal2-svc
                port:
                  number: 80
